@@ -68,3 +68,4 @@ yarn-error.log*
 ############
 ## Antora ##
 build/
+.venv/
